Added Repositories and Interfaces... next commit will have vendor segregation for role-based authentication

--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,19 @@
 # Database Configuration
-DB_NAME=InvoiceProcessingV2
-DB_PASSWORD=YOUR_STRONG_PASSWORD_HERE
+DB_HOST=localhost\SQLEXPRESS
+DB_PORT=1433
+DB_NAME=YOUR_DATABASE_NAME
+DB_USER=YOUR_DB_USER
+DB_PASSWORD=YOUR_DB_PASSWORD
+
+# Backend Configuration
+BACKEND_URL=http://localhost:5247
+CALLBACK_SECRET=YOUR_CALLBACK_SECRET_BASE64
 
 # Google Drive Configuration
-GOOGLE_FOLDER_ID=YOUR_GOOGLE_DRIVE_FOLDER_ID
-
-# Security
-CALLBACK_SECRET=YOUR_CALLBACK_SECRET_BASE64
-ADMIN_API_KEY=YOUR_ADMIN_API_KEY
+GOOGLE_SERVICE_ACCOUNT_KEY=./secrets/service-account-key.json
+DRIVE_DOWNLOAD_TIMEOUT=300
+DRIVE_CHUNK_SIZE=1048576
+DRIVE_MAX_RETRIES=3
 
 # Groq LLM Configuration
 GROQ_API_KEY=YOUR_GROQ_API_KEY
@@ -16,3 +22,4 @@ GROQ_MODEL=llama-3.3-70b-versatile
 # Worker Configuration
 WORKER_ID=worker-1
 POLL_INTERVAL=5
+MAX_RETRIES=3
