--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -1,33 +1,37 @@
 # FastAPI and server
-fastapi==0.109.2
-uvicorn[standard]==0.27.1
-pydantic==2.6.1
-pydantic-settings==2.1.0
+fastapi
+uvicorn[standard]
+pydantic 
+pydantic-settings 
+
+# Environment
+python-dotenv
 
 # Database
-pyodbc==5.0.1
+pyodbc 
 
 # Google Drive
-google-api-python-client==2.116.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.0
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+httplib2
 
 # OCR (Image Pipeline)
-pytesseract==0.3.10
-Pillow==10.2.0
+pytesseract
+Pillow==12.1.0 
 
 # PDF (PDF Pipeline)
-pdfplumber==0.11.0
-PyMuPDF==1.23.26
+pdfplumber
+PyMuPDF 
 
 # LLM
-groq==0.4.2
+groq
 
-# MIME Detection (CHANGED: python-magic for Linux)
-python-magic==0.4.27
+# MIME Detection
+python-magic-bin==0.4.14
 
 # HTTP Client
-httpx==0.26.0
+httpx
 
 # Utilities
-python-json-logger==2.0.7
+python-json-logger
