--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -1,20 +1,20 @@
 # FastAPI and server
-fastapi==0.109.2
+fastapi==0.110.0
 uvicorn[standard]==0.27.1
-pydantic==2.6.1
-pydantic-settings==2.1.0
+pydantic==2.6.4
+pydantic-settings==2.2.1
 
 # Database
-pyodbc==5.0.1
+pyodbc==5.1.0
 
 # Google Drive
-google-api-python-client==2.116.0
+google-api-python-client==2.118.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
 
 # OCR (Image Pipeline)
 pytesseract==0.3.10
-Pillow==10.2.0
+Pillow==10.4.0
 
 # PDF (PDF Pipeline)
 pdfplumber==0.11.0
@@ -23,11 +23,11 @@ PyMuPDF==1.23.26
 # LLM
 groq==0.4.2
 
-# MIME Detection (CHANGED: python-magic for Linux)
+# MIME Detection
 python-magic==0.4.27
 
 # HTTP Client
-httpx==0.26.0
+httpx==0.27.0
 
 # Utilities
 python-json-logger==2.0.7
