--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,92 +1,56 @@
-version: '3.8'
-
 services:
-  # SQL Server Database
-  sqlserver:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: invoice-sqlserver
+  postgres:
+    image: postgres:16
+    container_name: app-postgres
+    restart: unless-stopped
     environment:
-      - ACCEPT_EULA=Y
-      - SA_PASSWORD=${DB_PASSWORD:-YourStrong@Passw0rd}
-      - MSSQL_PID=Developer
+      POSTGRES_DB: appdb
+      POSTGRES_USER: appuser
+      POSTGRES_PASSWORD: secret
     ports:
-      - "1433:1433"
+      - "5432:5432"
     volumes:
-      - sqlserver-data:/var/opt/mssql
-    healthcheck:
-      test: /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "$${SA_PASSWORD}" -Q "SELECT 1" || exit 1
-      interval: 10s
-      timeout: 3s
-      retries: 10
-      start_period: 10s
-    networks:
-      - invoice-network
+      - pgdata:/var/lib/postgresql/data
 
-  # .NET Backend API
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
     container_name: invoice-backend
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=${DB_NAME:-InvoiceProcessingV2};User Id=sa;Password=${DB_PASSWORD:-YourStrong@Passw0rd};TrustServerCertificate=True;Encrypt=False
-      - GoogleDrive__ServiceAccountKeyPath=/app/secrets/service-account-key.json
-      - GoogleDrive__SharedFolderId=${GOOGLE_FOLDER_ID}
-      - Security__CallbackSecret=${CALLBACK_SECRET}
-      - Security__AdminApiKey=${ADMIN_API_KEY:-admin-default-key}
-      - JobCreation__IntervalSeconds=30
-      - Cors__AllowedOrigins=http://localhost:4200,http://localhost:4201
-    ports:
-      - "5247:80"
-    volumes:
-      - ./secrets/service-account-key.json:/app/secrets/service-account-key.json:ro
-      - ./backend/logs:/app/logs
     depends_on:
-      sqlserver:
-        condition: service_healthy
-    networks:
-      - invoice-network
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+      - postgres
+    environment:
+      ASPNETCORE_URLS: http://+:5247
+      ConnectionStrings__DefaultConnection: Host=postgres;Port=5432;Database=appdb;Username=appuser;Password=secret
+      # Updated to use the path defined in 'volumes' below
+      GoogleDrive__ServiceAccountKeyPath: /secrets/service-account-key.json
+      Worker__CallbackUrl: http://worker:8001
+    volumes:
+      - ./secrets/service-account-key.json:/secrets/service-account-key.json:ro
+      - ./backend/Drive.Personal.Auth:/app/Drive.Personal.Auth
+    ports:
+      - "5247:5247"
 
-  # Python AI Worker
   worker:
     build:
       context: ./worker
-      dockerfile: Dockerfile
     container_name: invoice-worker
-    environment:
-      - DB_HOST=sqlserver
-      - DB_PORT=1433
-      - DB_NAME=${DB_NAME:-InvoiceProcessingV2}
-      - DB_USER=sa
-      - DB_PASSWORD=${DB_PASSWORD:-YourStrong@Passw0rd}
-      - BACKEND_URL=http://backend:80
-      - CALLBACK_SECRET=${CALLBACK_SECRET}
-      - GROQ_API_KEY=${GROQ_API_KEY}
-      - GROQ_MODEL=${GROQ_MODEL:-llama-3.3-70b-versatile}
-      - GOOGLE_SERVICE_ACCOUNT_KEY=/app/secrets/service-account-key.json
-      - WORKER_ID=${WORKER_ID:-worker-1}
-      - POLL_INTERVAL=${POLL_INTERVAL:-5}
-    volumes:
-      - ./secrets/service-account-key.json:/app/secrets/service-account-key.json:ro
     depends_on:
-      - sqlserver
+      - postgres
       - backend
-    networks:
-      - invoice-network
-    restart: unless-stopped
+    env_file:
+      - ./worker/.env
+    environment:
+      DB_HOST: postgres
+      BACKEND_URL: http://backend:5247
+      # Updated to use the path defined in 'volumes' below
+      GOOGLE_SERVICE_ACCOUNT_KEY: /secrets/service-account-key.json
+    volumes:
+      - ./secrets/service-account-key.json:/secrets/service-account-key.json:ro
+      - ./logs:/logs
+    ports:
+      - "8001:8001"
 
 volumes:
-  sqlserver-data:
-    driver: local
-
-networks:
-  invoice-network:
-    driver: bridge
+  pgdata:
+    external: true
+    name: postgres_data
