--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.0",
     "express": "^4.18.2",
+    "node-modules": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
