--- a/.github/workflows/backend-worker-ci.yml
+++ b/.github/workflows/backend-worker-ci.yml
@@ -16,9 +16,13 @@ jobs:
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u icantype1912 --password-stdin
     - uses: actions/checkout@v4
     - name: Build backend Image
-      run: docker build ./backend
+      run: 
+        docker build -t ghcr.io/icantype1912/backend:latest ./backend
+        docker push ghcr.io/icantype1912/backend:latest
     - name: Build worker image
-      run: docker build ./worker
+      run:
+        docker build -t ghcr.io/icantype1912/backend:worker ./worker
+        docker push ghcr.io/icantype1912/worker:latest
 
 
   
