--- a/.github/workflows/backend-worker-ci.yml
+++ b/.github/workflows/backend-worker-ci.yml
@@ -21,7 +21,7 @@ jobs:
         docker push ghcr.io/icantype1912/backend:latest
     - name: Build worker image
       run: |
-        docker build -t ghcr.io/icantype1912/backend:worker ./worker
+        docker build -t ghcr.io/icantype1912/worker:latest ./worker
         docker push ghcr.io/icantype1912/worker:latest
 
 
