--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,6 @@ Thumbs.db
 # ===========================================
 **/*.mdf
 **/*.ldf
-b a c k e n d / * . j s o n 
- 
- 
+backend/*.json
+
+docker-compose.yml
